# formula1-predictor

./: README.md  pyproject.toml
formula1/: cli.py  predictor.py
